# MiniMacLLM

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MODEL_CARD.md  Model.py  README.md  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: SECURITY.md  dependabot.yml
.github/workflows/: codeql.yml  security-scan.yml
checkpoints/: .gitignore  README.md
checkpoints/wikitext_medium/final/: model.pt
configs/: large.yaml  medium.yaml  small.yaml
docs/: GITHUB_RELEASE.md  README.md  SECURITY_SETUP.md  TRAINING_ENHANCEMENTS.md  api-reference.md  architecture.md  continual_learning_demo.md  evaluation.md  getting-started.md  project-status.md  user-guide.md
docs/research/: architecture-planning.md  continual-learning-deep-dive.md  requirements-analysis.md  system-summary.md
scripts/: continual_learn.py  generate.py  pretrain.py  test_continual_learning.sh  train_tokenizer.py
src/continual/: continual_trainer.py  ewc.py  experience_replay.py  multimodal_trainer.py
src/data/: __init__.py  data_pipeline.py
src/evaluation/: __init__.py  evaluator.py  metrics.py
src/lora/: liquid_lora.py  lora_layer.py  lora_model.py
src/model/: attention.py  embeddings.py  feedforward.py  llm.py  multimodal_attention.py  normalization.py  predictive_transformer.py  transformer_block.py  vision_encoder.py  vision_fusion.py
src/neurobio/: __init__.py  autonomous_learning.py  dendritic.py  eprop_optimizer.py  hippocampal_memory.py  homeostasis.py  liquid_dynamics.py  neuromodulation.py  predictive_coding.py  sleep_consolidation.py  working_memory.py
src/tokenization/: bpe_tokenizer.py  multimodal_tokenizer.py  vocab_trainer.py
tests/: __init__.py  test_smoke.py
tests/integration/: test_advanced_brain_mechanisms.py  test_continual_learning.py  test_multimodal_integration.py  test_pretrain_integration.py
tests/unit/: test_attention.py  test_embeddings.py  test_evaluation.py  test_lora.py  test_normalization.py  test_pretrain_enhancements.py  test_tokenizer.py
